--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,10 @@
-asgiref==3.5.2
+asgiref==3.6.0
 Django==3.2.16
 django-extensions==3.2.1
 django-filter==22.1
 django-mathfilters==1.0.0
-django-timer==0.9
-django-truncate==0.1
 django-widget-tweaks==1.4.12
-et-xmlfile==1.1.0
-openpyxl==3.0.10
-pytz==2022.5
+pytz==2022.7.1
 sqlparse==0.4.3
-timer==0.2.2
-typing-extensions==4.4.0
-XlsxWriter==3.0.4
+typing_extensions==4.4.0
 xlwt==1.3.0
